Fixed spacing in header & footer // started design of main block

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,105 +1,125 @@
 /* General styles */
 
-    html, body { 
-        margin: 0; 
-        padding: 0;
-        font-family: arial,sans-serif;
-    }
+html, body { 
+    margin: 0; 
+    padding: 0;
+    font-family: arial,sans-serif;
+}
 
-    .flex-container {
-        background-color: rgb(177, 157, 157);
-        display:flex;
-    }
+.flex-container {
+    display:flex;
+}
 
-    a {
-        text-decoration: none;
-    }
+a, li {
+    padding:5px;
+}
+
+a {
+    text-decoration: none;
+}
 
 /* Top menu */
 
-    header {
-        position: absolute;
-        width: 100%;
-        top: 0;
-        height: 2.5rem;              
-    }
+header {
+    position: absolute;
+    width: 100%;
+    top: 0;
+    height: 2.5rem;              
+}
 
-    .container-header {
-        justify-content: flex-end;
-        margin-left: 10px;
-        margin-right:10px;
-        background-color: pink;
-    }
+.container-header {
+    justify-content: flex-end;
+    margin-left: 10px;
+    margin-right:10px;
+}
 
-    ul {
-        display:flex;
-        list-style-type: none;
-        margin: 0;
-        padding:0;
-    }
+header ul, footer ul {
+    display:flex;
+    list-style-type: none;
+    margin: 0;
+    padding:0;
+    align-items:center;
+}
 
-    /*How to align vertically text and icons? */
+header li {
+    display:flex; 
+}
 
-    li, .icon {
-        margin-left: 10px;
-        margin-right: 10px;
-    }
+header a {
+    color: rgba(0, 0, 0, 0.788);
+}
 
-    .icon {
-        height:30px;
-        width:30px;
-        padding:5px;
-    }
+.icon {
+    height:30px;
+    width:auto;
+    padding:5px;
+}
 
 /* Main */
 
-    #container-main {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
-        width:auto;
-    }
+#container-main {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width:auto;
+}
 
-    #logo {
-        width:272px;
-        height:auto;
-    }
+#logo {
+    width:272px;
+    height:auto;
+    padding: 10px;
+}
 
-    .buttons {
-        justify-content: space-evenly;
-    }
+#search {
+    width: 400px;
+    height:50px;
+    margin:10px;
+    border-radius: 30px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(214, 211, 211);
+    /*TO DO: remove effect while clicking, change text and hover*/
+}
+
+.buttons {
+    justify-content: center;
+    margin-top:10px;
+   
+}
+button {
+    width: auto;
+    padding:10px;
+    margin:5px;
+    /*TO DO: change text, background color and hover effect*/
+
+}
 
 /* Bottom menu */
 
-    footer {
-        position: absolute;
-        width: 100%;
-        bottom: 0;
-        height: 2.5rem;        
-    }
+footer {
+    position: absolute;
+    width: 100%;
+    bottom: 0;        
+}
 
-    .footer-1 {
-        width:20%;
-        justify-content: flex-start;
-        margin-left:10px;
-        margin-right:10px;
-    }
-    
-    
-    .footer-2 {
-        justify-content: space-between;
-        margin-left:10px;
-        margin-right:10px;
-    }
-        /* Format for footer elements */ 
+.footer-line {
+    padding:10px;
+    background-color: #f2f2f2;
+    border-top: 1px solid rgb(214, 211, 211);
 
-        a.footer {
-            margin-left: 5px;
-        }
+}
 
-        li.footer {
-            margin-left:5px;
-            margin-right: 5px;
-        }
+#footer-2 {
+    justify-content: space-between;    
+}
+
+#country {
+    padding:10px;
+}
+footer a {
+    color: rgba(0,0,0,.54);
+}
+
+  
